--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "axios": "^0.9.1",
     "babelify": "^6.1.2",
     "browser-sync": "^2.2.1",
     "browserify": "^8.1.3",
@@ -17,10 +18,16 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-inject": "^4.0.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.2.0",
     "gulp-util": "^3.0.3",
+    "json-server": "^0.8.9",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-redux": "^4.4.1",
+    "react-router": "^2.0.1",
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1",
     "vinyl-map": "^1.0.1",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.3.0"
